[package]
name = "window_lib"
version = "0.1.0"
authors = ["cuhey3 <uotaneet@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
#rand = "0.9.0-alpha.2"
#getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3.13"
web-sys = { version = "0.3.70", features = ["Window", "Document", "Element", "NodeList", "DomTokenList", "Storage", "WebSocket", "MessageEvent", "DomRect", "HtmlCollection"] }
#serde_json = "1.0"
#serde = { version = "1.0.210", features = ["derive"] }
#js-sys = "0.3.70"
[dev-dependencies]

[profile.release]
opt-level = "z"
[package.metadata.wasm-pack.profile.release]
wasm-opt = false